# iotc-python-sdk

./: .gitignore  CODEOWNERS  PKG-INFO  README.md  help.txt  master.md  pyproject.toml  run_tests.sh  setup.cfg  setup.py  windows_install.md
iotc-python-sdk/: .gitignore  help.txt
iotc-python-sdk/iotconnect-sdk/: setup.py
iotc-python-sdk/sample/: iotconnect-sdk-1.1-firmware-python_msg-2_1.py
iotconnect/: IoTConnectSDK.py  SDKOptions.py  config.py
iotconnect-sdk/: setup.py
iotconnect-sdk-1.0/: README.md  setup.py
iotconnect-sdk-1.0/iotconnect/: IoTConnectSDK.py  IoTConnectSDKException.py
iotconnect-sdk-1.0/iotconnect_sdk.egg-info/: SOURCES.txt
iotconnect-sdk-3.0.1/: PKG-INFO  README.md  setup.py
iotconnect-sdk-3.0.1/iotconnect/: IoTConnectSDK.py  IoTConnectSDKException.py
iotconnect-sdk-3.0.1/iotconnect_sdk.egg-info/: SOURCES.txt
iotconnect-sdk-3.0.4/: PKG-INFO  README.md  setup.py
iotconnect-sdk-3.0.4/iotconnect/: IoTConnectSDK.py
iotconnect-sdk-3.0.4/iotconnect_sdk.egg-info/: requires.txt
iotconnect-sdk-3.0.5/: setup.py
iotconnect-sdk-3.0.5/iotconnect_sdk.egg-info/: PKG-INFO  SOURCES.txt
iotconnect-sdk/iotconnect/: IoTConnectSDK.py  IoTConnectSDKBase.py  __init__.py  (+1 more)
sample/: aws_iotconnect-sdk-1.1-firmware-python_msg-2_1.py  example.py  iotconnect-sdk-1.0-firmware-python_msg-2_1.py  iotconnect-sdk-1.1-firmware-python_msg-2_1.py  iotconnect-sdk-firmware-python-3.0.4.py  iotconnect-tpm-sdk-firmware-python-3.0.1.py  kinesistest.py  raw_iotconnect-sdk-1.1-firmware-python_msg-2_1.py
tests/: conftest.py  test_d2c.py  test_sdk_init.py
(+37 files in other folders)
