[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iotconnect-sdk"
version="3.0"
description = "IoT Connect SDK"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Connor Graflund", email = "connor.graflund@avnet.com"}
]
maintainers = [
  {name = "Connor Graflund", email = "connor.graflund@avnet.com"}
]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "paho-mqtt",
  "ntplib",
  "jsonlib-python3"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
Documentation = "https://docs.iotconnect.io/iotconnect/sdk/"
Repository = "https://github.com/avnet-iotconnect/iotc-python-sdk"